--- a/pom.xml
+++ b/pom.xml
@@ -76,6 +76,12 @@
 							<artifactId>checkstyle</artifactId>
 							<version>10.3</version>
 						</dependency>
+						<dependency>
+							<groupId>org.mockito</groupId>
+							<artifactId>mockito-core</artifactId>
+							<version>5.4.0</version>
+							<scope>test</scope>
+						</dependency>
 					</dependencies>
 				</plugin>
 				<plugin>
